<resources>
    <string name="app_name">DrawerSettingMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- 1Depth -->
    <string name="menu_noti_setting">공지사항</string>
    <string name="menu_child_setting">자녀 보호 설정</string>
    <string name="menu_channel_setting">채널 관련 설정</string>

    <!-- 2Depth -->
    <string name="menu_back_depth">이전으로</string>
    <string name="menu_channel_setting_favor">선호 채널 수정</string>
    <string name="menu_channel_setting_info">앱 채널 정보</string>


</resources>