<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_2d_back"
            android:icon="@drawable/ic_menu_2d_back"
            android:title="@string/menu_back_depth" />
        <item
            android:id="@+id/nav_channel_favor"
            android:icon="@drawable/ic_menu_1d_child_setting"
            android:title="@string/menu_channel_setting_favor" />
        <item
            android:id="@+id/nav_channel_info"
            android:icon="@drawable/ic_menu_1d_channel_setting"
            android:title="@string/menu_channel_setting_info" />
    </group>
</menu>